[tool.poetry]
name = "repl_python3_richard-bot"
version = "0.1.0"
description = ""
authors = ["Emily Nie, Lindsay Zhang, Jasmine Gong"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pandas = "^1.3.5"
google-api-python-client = "^2.35.0"
keras = "^2.7.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
